# system-dashboard

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  ecosystem.yaml  network-map.yaml  pyproject.toml  seed.yaml
.claude/plans/: 2026-03-12-mobile-interaction-api-gateway.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: contextual-timeline-spec.md
docs/pitch/: index.html
infra/: cloudflared-config.yml.example  com.4jp.cloudflared.organvm.plist  com.4jp.organvm.dashboard.plist  ios-shortcuts.md  setup-mobile.sh  termius-setup.md
src/dashboard/: __init__.py  app.py
src/dashboard/data/: cache.py  loader.py
src/dashboard/formatters/: plaintext.py
src/dashboard/middleware/: auth.py
src/dashboard/routes/: api_v1.py  atoms.py  content.py  ecosystem.py  essays.py  graph.py  health.py  irf.py  network.py  omega.py  ontologia.py  progress.py  pulse.py  registry.py  soak.py  testament.py  trivium.py
src/dashboard/templates/: atoms.html  base.html  content.html  ecosystem.html  essays.html  graph.html  health.html  irf.html  network.html  omega.html  ontologia.html  ontologia_metrics.html  ontologia_variables.html  progress.html  progress_detail.html  pulse.html  pulse_events_partial.html  registry.html  soak.html  trivium.html
tests/: test_api_v1.py  test_app.py  test_content_route.py  test_health_route.py  test_loader.py  test_ontologia_route.py  test_progress_cache.py  test_pulse_route.py
